--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   
-    <title>Document</title>
+    <title>MYNTRA CLONE</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
