--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
 
 <head>
-  
     <title>MYNTRA CLONE</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
     <header>
+
         <div class="logo_container">
             <a href="#"><img class="logo" src="images/myntra_logo.webp" alt="logo"></a>
         </div>
-        <nav class="nav">
+
+        <div class="nav_container">
+            <nav class="nav">
             <a href="#" id="men" class="nav_content">MEN</a>
             <a href="#" id="women" class="nav_content">WOMEN</a>
             <a href="#" id="kids" class="nav_content">KIDS</a>
@@ -22,19 +24,18 @@
             <a href="#" id="home" class="nav_content">HOME</a>
             <a href="#" id="genz" class="nav_content">GENZ</a>
             <a href="#" id="studio" class="nav_content">STUDIO <sup id="new">NEW</sup></a>
+            </nav>
+        </div>
 
-        </nav>
         <div class="search_bar">
             <span class="material-symbols-outlined search_icon">search</span>
             <input class="search_input" placeholder="Search For Products,Brands and More">
         </div>
 
-
         <div class="action_bar">
             <div class="action_container">
                 <a href="#"> <span class="material-symbols-outlined">person</span></a>
                 <a href="#"><span class="action_name">Profile</span></a>
-
             </div>
             <div class="action_container">
                 <a href="#"><span class="material-symbols-outlined action_icon">favorite</span></a>
@@ -44,16 +45,26 @@
                 <a href="#"><span class="material-symbols-outlined action_icon">shopping_bag</span></a>
                 <a href="#"><span class="action_name">Bag</span></a>
             </div>
+
         </div>
     </header>
-    <main>
-        <div class="images">
-             <img class="image" src="images/1.png" alt="1">
+   <main>
+       <div class="banner_image">
+<br><br><br>
+            <img class="image" src="images/1.png" alt="1">
             <img class="image" src="images/2.png" alt="1">
+
+            </div>
+            <div class="floating_image">
+
             <img class="imagestatic" src="images/stat1.png" alt="1">
             <img class="imagestatic2" src="images/stat2.png" alt="1">
-              <div class="category_heading">MEDAL WORTHY BRANDS TO BAG</div>
-        <div class="category_items">
+
+            </div>
+ <div class="category_heading">MEDAL WORTHY BRANDS TO BAG</div>
+             <div class="category_items">
+             
+        <div class="images">
             <a href="#"><img class="sale_item" src="images/offers/1.png"></a>
             <a href="#"><img class="sale_item" src="images/offers/2.png"></a>
             <a href="#"><img class="sale_item" src="images/offers/3.png"></a>
@@ -67,9 +78,12 @@
             <a href="#"><img class="sale_item" src="images/offers/11.png"></a>
             <a href="#"><img class="sale_item" src="images/offers/12.png"></a>
         </div>
+        </div>
+
 
           <div class="category_heading">MEDAL WORTHY BRANDS TO BAG</div>
-        <div class="category_items">
+          <div class="category_items">
+        <div class="images">
             <a href="#"><img class="sale_item" src="images/categories/1.jpg"></a>
             <a href="#"><img class="sale_item" src="images/categories/2.jpg"></a>
             <a href="#"><img class="sale_item" src="images/categories/3.jpg"></a>
@@ -86,36 +100,38 @@
     </main>
     <footer>
         <div class="footer_container1">
-            <div class="footer_column">
-                <h3>ONLINE SHOPPING</h3>
 
+            <div class="footer_column1">
+                <h3>ONLINE SHOPPING</h3><br>
                 <a href="#">Men</a>
                 <a href="#">Women</a>
                 <a href="#">Kids</a>
                 <a href="#">Home & Living</a>
                 <a href="#">Beauty</a>
                 <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
+                <a href="#">Myntra Insider</a><br>
+                <a id="link" href="#">USEFUL LINKS</a>
             </div>
 
-            <div class="footer_column">
+            <div class="footer_column1">
                 <h3>CUSTOMER POLICIES</h3>
             </div>
 
-            <div class="footer_column">
+            <div class="footer_column1">
                 <h3>EXPERIENCE MYNTRA APP ON MOBILE</h3>
                 <img src="images/applogo.png" alt="1">
-                <h3>KEEP IN TOUCH</h3>
-                <img src="images/social.png" alt="1">
+                <h3>KEEP IN TOUCH</h3><br>
+                <img class="social" src="images/social.png" alt="1">
             </div>
-            <div class="footer_column">
-                <img src="images/imm2.png" alt="1">
+
+            <div class="footer_column1">
+                <img src="images/imm.png" alt="1">
             </div>
         </div>
 
         <div class="footer_container2">
 
-            <div class="footer_column2">
+            <div class="footer_column2"><br>
                 <h3>POPULAR SEARCHES</h3>
                 <br>
                 <P><a class="txtdeco" href="#">Makeup | Dresses For Girls | T-Shirts | Sandals | Headphones | Babydolls
@@ -127,26 +143,18 @@
                         Nike Shoes | Goggles | Bras | Suit | Chinos | Shoes | Adidas Shoes | Woodland Shoes | Jewellery
                         | Designers Sarees</a></P>
                 <br>
-
-                <div class="footer_column3">
-                    <p>In case of any concern,<a href="#"> Contact Us</a> </p>
-                    <p>© 2026 www.myntra.com. All rights reserved.</p>
-                    <p>A Flipkart company
-                    </p>
-
-                </div>
             </div>
-
-
         </div>
+        
         <div class="footer_container3">
 
-        </div>
-
-
-<br><br>
-
+            <div class="footer_column3">
+                    <p>In case of any concern,<a href="#"> Contact Us</a> </p>
+                    <p>© 2026 www.myntra.com. All rights reserved.</p>
+                    <p>A Flipkart company</p>
+            </div>
+        </div>   
+        <br><br><br>
     </footer>
 </body>
-
 </html>
